@@ -37,6 +37,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{553, 90}, {994, 1075}}</string>
+	<string>{{517, 79}, {1078, 1090}}</string>
 </dict>
 </plist>
